[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["Lucas Lucyk <lucaslucyk@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "shared", from = "src"}, {include = "auth", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = {extras = ["email"], version = "^2.8.2"}
fastapi = "^0.112.2"
pydantic-settings = "^2.4.0"
uvicorn = "^0.30.6"
motor = "^3.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
